<resources>
    <string name="app_name">Город: настройка уведомлений</string>
    <string name="app_name_stub">stub: настройка уведомлений</string>
    <string name="xgate_post_login_pass_whereid_request"><![CDATA[<?xml version=\"1.0\" encoding=\"windows-1251\"?><xgate_request><datasource>INV_PLAT</datasource><maxrows>1000</maxrows><login_pass><where_id>-1028</where_id><user>{USER}</user><password>{PASS}</password></login_pass></xgate_request>]]></string>
    <string name="xgate_post_login_pass_request"><![CDATA[<?xml version=\"1.0\" encoding=\"windows-1251\"?><xgate_request><datasource>INV_PLAT</datasource><maxrows>1000</maxrows><login_pass><user>{USER}</user><password>{PASS}</password></login_pass></xgate_request>]]></string>
    <string name="user_mask">{USER}</string>
    <string name="pass_mask">{PASS}</string>
    <string name="login_loading">загрузка данных</string>
    <string name="login_check_input_user">Укажите логин</string>
    <string name="login_check_input_pass">Укажите пароль</string>
    <string name="empty_input">Введите слово</string>
    <string name="error_404">Нет соединения, оффлайн режим</string>
    <string name="error_host">Сервер недоступен, оффлайн режим</string>
    <string name="error_no_word">Слово не найдено</string>
    <string name="data_not_exists_error">Данные не найдены</string>
    <string name="empty_login_error">Email не может быть пустым</string>
    <string name="empty_password_error">Минимальная длина пароля - 5 символов</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="ruble">₽</string>
    <string name="ok">OK</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="warning">Внимание</string>
    <string name="del_subs">Удалить подписку:</string>
    <string name="error">Ошибка</string>
    <string name="close">Закрыть</string>
    <string name="cancel">Отмена</string>
    <string name="next">Далее</string>
    <string name="done">Готово</string>
    <string name="good">Хорошо</string>
    <string name="please_wait">Пожалуйста, подождите</string>
    <string name="please_wait_session_update">Пожалуйста, подождите\nИдет обновление сессии</string>
    <string name="choose_program">Выберите программу</string>
    <string name="esia_card">Карта ЕСИА</string>
    <string name="debt">Долг</string>
    <string name="overpayment">Переплата</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="authorization_required">Требуется повторная авторизация карты</string>
    <string name="about_authorization_required">Без авторизации информация по данной карте будет ограничена\n\nНомер карты\n%s</string>
    <string name="session_updated">Сессия обновлена. Пожалуйста, повторите предыдущее действие</string>
    <string name="authorize">Авторизоваться</string>
    <string name="skip">Пропустить</string>
    <string name="enter_password">Введите пароль вашей карты</string>
    <string name="enter_later">Ввести позже</string>
    <string name="password">Пароль</string>
    <string name="field_necessary_error">Поле обязательно для заполнения</string>
    <string name="android_restriction_message">Уважаемые пользователи, в связи с повышением требований Совета стандартов безопасности индустрии платежных карт (PCI) и федеральных стандартов обработки информации , с 7 декабря приложение \"Город 74\" не будет работать на операционных системах Android с версией ниже 4.4. Надеемся на Ваше понимание.</string>
    <string name="service_added_in_cart_message">Услуга добавлена в корзину</string>
    <string name="services_added_in_cart_message">Услуги добавлены в корзину</string>
    <string name="session_error">Ошибка авторизации</string>
    <string name="internal_server_error">Ошибка сервера</string>
    <string name="network_error">Проверьте соединение с интернетом</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="program_not_found_error">Программа не найдена</string>
    <string name="invalid_login_or_password_error">Неверный логин или пароль</string>
    <string name="invalid_card_number_error">Неверный номер карты</string>
    <string name="enter_password_error">Введите пароль</string>
    <string name="card_not_found_error">Карта не найдена</string>
    <string name="invalid_passport_error">Неверные паспортные данные</string>
    <string name="enter_fio_error">Введите фамилию</string>
    <string name="XGATE_error">Неизвестная ошибка. Перезайдите в аккаунт</string>
    <string name="ORA1_error">Неизвестная ошибка. Перезайдите в аккаунт</string>
    <string name="ORA2_error">Неизвестная ошибка. Перезайдите в аккаунт</string>
    <string name="shopping_cart_authorized_error">Корзина авторизована. Вы не можете добавлять услуги</string>
    <string name="shopping_cart_error">Ошибка формирования корзины. Корзина очищена</string>
    <string name="cards_not_same_error">Карты не совпадают</string>
    <string name="you_cannot_add_service_to_cart_error">Вы не можете добавить эту услугу в корзину</string>
    <string name="payment_error">Не удалось сформировать платеж</string>
    <string name="add_payer_contacts_error">Не удалось добавить контактные данные плательщика</string>
    <string name="esia_version_error">Вход через ЕСИА поддерживается только начиная с Android 4.4</string>
    <string name="splash_screen_title">Моя Карта</string>
    <string name="tutorial_screen_title">Система \'\'Город\'\'</string>
    <string name="tutorial_screen_complete">Завершить обучение</string>
    <string-array name="tutorial_titles">
        <item>Все услуги в одном месте</item>
        <item>Быстрая оплата</item>
        <item>Персонализация</item>
    </string-array>
    <string-array name="tutorial_descriptions">
        <item>Войдите в приложение по своей карте Системы Город, чтобы отслеживать и оплачивать свои услуги в одном месте</item>
        <item>Быстро и удобно вводите все необходимые данные о платежах и управляйте корзиной с услугами</item>
        <item>Настраивайте ваши услуги так, как будет удобно вам</item>
    </string-array>
    <string name="main_screen_my_card">Моя Карта</string>
    <string name="main_screen_shopping_cart">Корзина</string>
    <string name="main_screen_profile">Профиль</string>
    <string name="login_name_titel">Логин</string>
    <string name="login_pass_titel">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="login_checking">проверка</string>
    <string name="login_title">Добро пожаловать!</string>
    <string name="login_subtitle">Выберите способ входа:</string>
    <string name="login_by_card">по Карте</string>
    <string name="login_by_passport">по Паспорту</string>
    <string name="login_card_number">Номер карты</string>
    <string name="login_password">Пароль</string>
    <string name="login_forgot_password">Забыли пароль?</string>
    <string name="login_passport_series">Серия</string>
    <string name="login_passport_number">Номер</string>
    <string name="login_last_name">Фамилия</string>
    <string name="login_login">Войти</string>
    <string name="login_login_by">Войти с помощью:</string>
    <string name="login_or">или</string>
    <string name="login_phone_number">Номера телефона</string>
    <string name="card_title">Моя Карта</string>
    <string name="card_search">Поиск</string>
    <string name="card_list">Список</string>
    <string name="card_grid">Сетка</string>
    <string name="card_express_payment">Экспресс\nоплата</string>
    <string name="card_search2">Поиск по услугам и значениям</string>
    <string name="card_not_found_title">Услуги отсутствуют</string>
    <string name="card_not_found_subtitle">На данной карте ни одной\nуслуги не найдено</string>
    <string name="card_sliding_panel_title">Параметры отображения:</string>
    <string name="card_sliding_panel_filter1">Все услуги</string>
    <string name="card_sliding_panel_filter2">Только долги</string>
    <string name="card_sliding_panel_filter3">Долги не в корзине</string>
    <string name="card_sliding_panel_filter4">Не в корзине</string>
    <string name="card_sliding_panel_favourite">Избранное</string>
    <string name="card_no_debts_message">Отсутствуют долги для добавления в корзину</string>
    <string name="card_pay_samples">ШАБЛОНЫ ОПЛАТЫ</string>
    <string name="card_logout">Выйти</string>
    <string name="shopping_cart_title">Корзина</string>
    <string name="shopping_cart_clear">Очистить</string>
    <string name="shopping_cart_authorized">Корзина авторизована, оплатите её, либо очистите</string>
    <string name="shopping_cart_total">Всего:</string>
    <string name="shopping_cart_pay">Оплатить</string>
    <string name="shopping_cart_empty_title">Корзина пуста</string>
    <string name="shopping_cart_empty_subtitle">Добавьте услуги</string>
    <string name="shopping_cart_sliding_panel_title">Оплатить услуги:</string>
    <string name="shopping_cart_sliding_panel_email">Email:</string>
    <string name="shopping_cart_sliding_panel_send_voucher">Отправить электронный чек по email</string>
    <string name="shopping_cart_sliding_panel_commission1">Для карт Челябинвестбанка комиссия составит</string>
    <string name="shopping_cart_sliding_panel_commission2">Для других карт комиссия составит</string>
    <string name="shopping_cart_item_payer">Плательщик:</string>
    <string name="shopping_cart_item_pu">Поставщик:</string>
    <string name="shopping_cart_item_inn">ИНН:</string>
    <string name="shopping_cart_item_acc_pu">Лицевой счет:</string>
    <string name="shopping_cart_will_be_cleared">Корзина будет очищена</string>
    <string name="shopping_cart_will_be_deleted">Услуга будет удалена</string>
    <string name="shopping_cart_payment">Оплата</string>
    <string name="shopping_cart_invalid_email_error">Некорректный email</string>
    <string name="shopping_cart_service_changed">Услуга изменена в корзине</string>
    <string name="profile_title">Профиль</string>
    <string name="profile_change">Изменить</string>
    <string name="profile_main_card">Основная карта</string>
    <string name="profile_card_not_found">Карта отсутствует</string>
    <string name="profile_saved_forms">Сохраненные анкеты</string>
    <string name="profile_tutorial">Обучение</string>
    <string name="profile_logout">Выйти из аккаунта</string>
    <string name="profile_version">Версия приложения: %1$s (%2$d)</string>
    <string name="esia_title">Вход через ЕСИА</string>
    <string name="edit_subscr_descr_display">Описание подписки</string>
    <string name="edit_subscr_descr_settings">Укажите описание подписки</string>
    <string name="edit_subscr_active_display">Активность подписки</string>
    <string name="edit_subscr_active_settings">Подписка активна</string>
    <string name="edit_email_descr_display">Email</string>
    <string name="edit_email_descr_settings">Введите адрес электронной почты</string>
    <string name="edit_email_verify">Необходимо указать правильный Email</string>
    <string name="edit_sms_descr_display">SMS</string>
    <string name="edit_push_descr_display">APP_PUSH</string>
    <string name="edit_push_descr_settings">Токен регистрации FCM для устройства</string>
    <string name="edit_push_descr_settings_name">Наименование устройства</string>
    <string name="edit_time_period">Предпочтительный период рассылки сообщений</string>
    <string name="edit_start_hour_descr_settings">Введите час начала предпочтительного периода рассылки сообщения</string>
    <string name="edit_finish_hour_descr_settings">Введите час окончания предпочтительного периода рассылки сообщения</string>
    <string name="edit_time_zone_descr_settings">Введите часовой пояс, по которому рассчитывается период рассылки</string>
    <string name="edit_title_panel_save">Сохранить</string>
</resources>