<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/vParentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/vTitlePanel"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <FrameLayout
                android:id="@+id/addressMainContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <FrameLayout
                    android:id="@+id/emailContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />

                <FrameLayout
                    android:id="@+id/smsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />

                <FrameLayout
                    android:id="@+id/pushContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/periodLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <com.chelinvest.notification.ui.custom.stylable.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/edit_time_period"
                    android:textColor="@color/darkJungleGreen"
                    android:textSize="17sp"
                    app:customTypefaceStyle="bold" />

                <com.chelinvest.notification.ui.custom.ModifiedEditText
                    android:id="@+id/startHourEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:cet_imeOption="actionDone"
                    app:cet_inputType="number"
                    app:cet_label="@string/edit_start_hour_descr_settings"
                    app:cet_textSize="16sp" />

                <com.chelinvest.notification.ui.custom.ModifiedEditText
                    android:id="@+id/finishHourEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:cet_imeOption="actionDone"
                    app:cet_inputType="number"
                    app:cet_label="@string/edit_finish_hour_descr_settings"
                    app:cet_textSize="16sp" />

                <com.chelinvest.notification.ui.custom.ModifiedEditText
                    android:id="@+id/timeZoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    app:cet_imeOption="actionDone"
                    app:cet_inputType="numberSigned"
                    app:cet_label="@string/edit_time_zone_descr_settings"
                    app:cet_textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/vTitlePanel"
        style="@style/AppTheme.TitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/vBackButton"
            style="@style/AppTheme.BackButtonImageView" />

        <TextView
            android:id="@+id/saveTextView"
            style="@style/AppTheme.TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_title_panel_save" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>